travis now should workk

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
-language: fortran
+language: c
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y mpi-default-bin mpi-default-dev
+  - sudo apt-get install -y gfortran
 
 compiler:
   - gfortran
 
 script:
+  - cd D1/src
   - make 
 
