--- a/D1/src/Makefile
+++ b/D1/src/Makefile
@@ -10,7 +10,7 @@ FCFLAGS = -O3 -Wall -Wextra -std=f2003
 
 # List of executables 
 
-default: ./readint_01.x ./readreal_02.x ./sorted_03.x ./list_tools.f03 ./sortedreal_04.x ./sortedreal_05.x
+default: ./readint_01.x ./readreal_02.x ./sorted_03.x ./list_tools.f03 ./sortedreal_04.x ./sortedreal_05.x ./funct_overl_06.x
 
 
 clean:	
@@ -38,6 +38,8 @@ clean:
 	$(FC) -o $@ $^ $(FCFLAGS) $(LIBS)
 
 
+./funct_overl_06.x: list_tools.o funct_overl_06.o
+	$(FC) -o $@ $^ $(FCFLAGS) $(LIBS)
 
 %.o: %.f03
 	$(FC) -c $(FCFLAGS) $< 
