--- a/D1/src/Makefile
+++ b/D1/src/Makefile
@@ -10,7 +10,7 @@ FCFLAGS = -O3 -Wall -Wextra -std=f2003
 
 # List of executables 
 
-default: ./readint_01.x ./readreal_02.x ./sorted_03.x ./list_tools.f03 ./sortedreal_04.x ./sortedreal_05.x ./funct_overl_06.x ./deriv_types_07.x
+default: ./readint_01.x ./readreal_02.x ./sorted_03.x ./list_tools.f03 ./sortedreal_04.x ./sortedreal_05.x ./funct_overl_06.x ./deriv_types_07.x ./sorting.f03 ./simplesort_09.x 
 
 
 clean:	
@@ -44,6 +44,10 @@ clean:
         
 ./deriv_types_07.x: deriv_types_07.o
 	$(FC) -o $@ $^ $(FCFLAGS) $(LIBS)
+
+
+./simplesort_09.x: list_tools.o sorting.o simplesort_09.o
+	$(FC) -o $@ $^ $(FCFLAGS) 
 
 %.o: %.f03
 	$(FC) -c $(FCFLAGS) $< 
