--- a/D1/src/Makefile
+++ b/D1/src/Makefile
@@ -3,14 +3,15 @@ SHELL=/bin/sh
 # The compiler
 FC = gfortran
 
-FCFLAGS = -O3 -Wall -Wextra -std=f2003 -p #-pg
+FCFLAGS = -O3 -Wall -Wextra -std=f2003 
 
 
 
 
 # List of executables 
 
-default:  ./next_prime_16.x 
+default: ./simplesort_09.x ./bubblesort_10.x ./insertionsort_11.x ./quicksort_12.x ./mergesort_13.x 
+
 
 clean:	
 	rm *.o
@@ -19,10 +20,19 @@ clean:
 
 
 
+./simplesort_09.x: list_tools.o sorting.o simplesort_09.o
+	$(FC) -o $@ $^ $(FCFLAGS) 
 
+./bubblesort_10.x: list_tools.o sorting.o bubblesort_10.o
+	$(FC) -o $@ $^ $(FCFLAGS) 
 
+./insertionsort_11.x: list_tools.o sorting.o insertionsort_11.o
+	$(FC) -o $@ $^ $(FCFLAGS) 
 
-./next_prime_16.x: next_prime_16.o
+./quicksort_12.x: list_tools.o sorting.o quicksort_12.o
+	$(FC) -o $@ $^ $(FCFLAGS) 
+
+./mergesort_13.x: list_tools.o sorting.o mergesort_13.o
 	$(FC) -o $@ $^ $(FCFLAGS) 
 
 
